# suparust

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: checks.yml
src/: auth.rs  lib.rs  postgrest.rs  tests.rs
src/storage/: mod.rs  object.rs
