[package]
name = "suparust"
authors = ["Anders B. Eie"]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Supabase client for Rust with support for WASM"
repository = "https://github.com/strykejern/suparust"
readme = "README.md"
keywords = ["supabase", "client", "wasm"]
categories = ["database", "wasm", "web-programming"]

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["sync"] }
serde_json = "1.0.128"
log = "0.4.22"
supabase-auth = "0.9.1"
mime = "0.3.17"
mime_guess = "2.0.5"

[patch.crates-io]
# Custom git revision to get support for PartialEq on structs in supabase-auth
# TODO: Update to proper version when it's released
supabase-auth = { git = "https://github.com/strykejern/supabase-auth-rs", branch = "derives" }

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = "1.1.0"

[target.'cfg(not(target_familty = "wasm"))'.dependencies]
chrono = "0.4.38"

[dev-dependencies]
httptest = "0.16.1"
env_logger = "0.11.5"
chrono = "0.4.38"
