[package]
name = "suparust"
authors = ["Anders B. Eie"]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Supabase client for Rust with support for WASM"
repository = "https://github.com/strykejern/suparust"
readme = "README.md"
keywords = ["supabase", "client", "wasm"]
categories = ["database", "wasm", "web-programming"]

[dependencies]
reqwest = { version = "0.12.7", default-features = false, features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["sync"] }
serde_json = "1.0.134"
log = "0.4.22"
supabase-auth = "=0.10.6"
mime = "0.3.17"
mime_guess = "2.0.5"
postgrest = { git = "https://github.com/supabase-community/postgrest-rs.git", version = "1.6.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = "1.1.0"

[target.'cfg(not(target_familty = "wasm"))'.dependencies]
chrono = "0.4.38"

[dev-dependencies]
httptest = "0.16.1"
env_logger = "0.11.5"
chrono = "0.4.38"
test-case = "3.3.1"

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
